--- a/lumber-hunter.html
+++ b/lumber-hunter.html
@@ -33,7 +33,20 @@
 	<script src="js/THREEx.FullScreen.js"></script>
 	<script src="js/THREEx.WindowResize.js"></script>
 
+
+
 	<div id="ThreeJS" style="z-index: 1; position: absolute; left:0px; top:0px"></div>
+
+	<div id="blocker">
+		<div id="instructions">
+			<span style="font-size:40px">Click to play</span>
+			<br />
+			(W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
+		</div>
+
+	</div>
+	
+	<script src="js/PointerLockControls.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
