--- a/lumber-hunter.html
+++ b/lumber-hunter.html
@@ -47,6 +47,7 @@
 	</div>
 	
 	<script src="js/PointerLockControls.js"></script>
+	<script type="text/javascript" src="js/physi.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
