--- a/lumber-hunter.html
+++ b/lumber-hunter.html
@@ -33,7 +33,8 @@
 	<script src="js/THREEx.FullScreen.js"></script>
 	<script src="js/THREEx.WindowResize.js"></script>
 
-
+	<!-- Diamond-square algorithm za terrain geometry -->
+	<script src="js/Terrain.js"></script>
 
 	<div id="ThreeJS" style="z-index: 1; position: absolute; left:0px; top:0px"></div>
 
