added 1st tree with cylinder mesh around it

--- a/lumber-hunter.html
+++ b/lumber-hunter.html
@@ -32,6 +32,8 @@
 	-->
 	<script src="js/THREEx.FullScreen.js"></script>
 	<script src="js/THREEx.WindowResize.js"></script>
+	<script src="js/THREE.OBJMTLLoader.js"></script>
+	<script src="js/THREE.MTLLoader.js"></script>
 
 	<!-- Diamond-square algorithm za terrain geometry -->
 	<script src="js/Terrain.js"></script>
