Added axe rotation and sound.

--- a/lumber-hunter.html
+++ b/lumber-hunter.html
@@ -8,6 +8,10 @@
 </head>
 	<body>
 
+	<audio id=axe_chop>
+	    <source src=sound/axe_chop.mp3>
+	</audio>
+
 	<script src="js/three.min.js"></script>
 	<!--
 		Detector.js mal poenostav postavljanje okolja.
